[package]
name = "fractal_nirvana_vr_rust"
version = "0.1.0"
authors = ["Steven Brodhead <keldor314@gmail.com>"]

[dependencies]
openvr = {path = "../rust-openvr"}
openvr_sys = {path = "../rust-openvr-sys"}
vulkano = "0.10.0"
vulkano-win = "0.10.0"
cgmath = "0.16.1"
image = "0.19.0"
winit = "0.17.2"
time = "0.1.40"
libc = "0.2"